[metadata]
name = django-bank-utils
version = 0.0.1
description = Django utils to reuse bank data.
long_description = file: README.rst
url = 'https://github.com/okchaty/django-bank-util's
author = Cristhian Bravo
author_email = cristhian@okchaty.com
license = 'MIT License'  # Example license
install_requires=['Django','django-model-utils']
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
