[metadata]
name = django-bank-utils
version = 0.0.3
description = Django models to reuse bank data.
long_description_content_type= text/markdown
long_description = file: README.md
url = https://github.com/okchaty/django-bank-utils
author = Chaty
author_email = developer@okchaty.com
license = 'MIT License'  # Example license
install_requires=['Django','django-model-utils']
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
